# xmeowbar

./: .gitignore  Makefile  README.md  cabal.project  flake.nix  xmeowbar.cabal
app/: Main.hs
