cabal-version: 2.4
name: xmeowbar
version: 0.1.0.0
synopsis: An Xmobar config
license: MIT
author: Christian Rocha
maintainer: christian@rocha.is
copyright: 2021 Christian Rocha

executable xmeowbar
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -rtsopts -with-rtsopts=-V0 -threaded
    build-depends:
        base >= 4.14.1.0 && < 5
      , xmobar == 0.42
